installation instructions live

--- a/how_to_install_python.html
+++ b/how_to_install_python.html
@@ -105,6 +105,13 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul></li>
 </ul></li>
 </ol></li>
+<li><p>chosing an editor: There are many great editors for creating python code. You can use whatever you are comfortable with, or download one of the following:</p>
+<ul>
+<li><a href="https://www.sublimetext.com/">sublime</a></li>
+<li><a href="https://www.jetbrains.com/pycharm/">pycharm</a></li>
+<li><a href="http://aquamacs.org/">aquamacs</a></li>
+<li><a href="https://atom.io/">atom</a></li>
+</ul></li>
 </ol>
 </body>
 </html>
